# rngpaper

./: Cargo.toml  README.md  build.rs  embed_resources.exe.manifest  embed_resources.rc
src/: config.rs  main.rs  structs.rs
