[package]
name = "rngpaper"
version = "0.1.0"
authors = ["Helba <helba@netslum.dev>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
wallpaper = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.3"
log = "0.4.14"
simplelog = "0.10.0"
native-windows-gui = "1.0.11"
native-windows-derive = "1.0.3"
once_cell = "1.8.0-pre.1"
toml = "0.5.8"
fs2 = "0.4.3"

[build-dependencies]
embed-resource = "1.3"